# codechallenge-system

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ingest_system/: db.py  etl.py  main.py  utils.py
tests/: etl_test.py
