[tool.poetry]
name = "ingest_system"
version = "0.1.0"
description = ""
authors = ["Joan"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.31"
numpy = "^2.0.0"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
